--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -8,8 +8,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #using ddl auto mode we can give access to hibernate like here allowed to update db or we can give none etc
-#if update not
-spring.jpa.hibernate.ddl-auto=update
+#if update not;
+# **create** mode will make new tables in db against entities if they don't exist and drop table if it exists at start;
+# **update** will only update schema not create new tables
+# **none** will do nothing
+# **validate** will only validate and fail on validation failure
+# **create-drop** will create at server start and drop at server stoppage
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Show SQL
 spring.jpa.properties.hibernate.show_sql=true
