--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # **none** will do nothing
 # **validate** will only validate and fail on validation failure
 # **create-drop** will create at server start and drop at server stoppage
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Show SQL
 spring.jpa.properties.hibernate.show_sql=true
